fixing deals chart visibility

--- a/app/assets/stylesheets/pages/pacing_dashboard.scss
+++ b/app/assets/stylesheets/pages/pacing_dashboard.scss
@@ -60,6 +60,11 @@
     #pipeline-revenue-chart-container {
         display: inline-block;
         width: calc(100% - #{$metrics-width});
+        .pacing-chart {
+            .graph {
+                opacity: 0;
+            }
+        }
     }
     .pacing-chart {
         height: auto;
